# NostraBase

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CPackConfig.cmake.in  NostraBaseConfig.cmake.in  NostraBaseTargets.cmake  config.h.in  welcome.txt
doc/: Doxyfile.in  DoxygenLayout.xml
include/nostra/base/: version.h  version.hpp
src/: version.cpp
test/nba.cpp.ex.s.version.wt.1.d/src/: test.cpp
